--- a/trunk.toml
+++ b/trunk.toml
@@ -3,7 +3,7 @@ target = "index.html"       # The index HTML file to drive the bundling process.
 html_output = "SidePanel.html"  # The name of the output HTML file.
 release = true # Build in release mode.
 dist = "docs"               # The output dir for all final assets.
-public_url = "/"            # The public URL from which assets are to be served.
+public_url = "/parking-lot/"            # The public URL from which assets are to be served.
 filehash = true             # Whether to include hash values in the output file names.
 inject_scripts = true     
 offline = false            
